--- a/manual/index.html
+++ b/manual/index.html
@@ -1,14 +1,14 @@
 <html>
   <head>
-    <link rel="stylesheet" href="style.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.2/react.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.2/react-dom.js"></script>
+    <link rel="stylesheet" href="src/style.css">
+    <script src="build/react.js"></script>
+    <script src="build/react-dom.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
   </head>
   <body>
-    <h1>Hello React.JS</h1>
+    
+    <div id="example"></div>
 
-    <script src="script.js"></script>
+    <script src="src/script.jsx"></script>
   </body>
 </html>
