--- a/areact/2-component/index.html
+++ b/areact/2-component/index.html
@@ -6,13 +6,10 @@
   </head>
   <body>
     <div id="example"></div>
+
+    <div class="mystyle"></div>
     
-  <script type="text/jsx">
-    React.render(
-      <h1>Hello, world!</h1>, document.getElementById('example')
-);
-  </script>
-  
-    <script  src="hello.js"></script>
+ 
+    <script  src="hello.jsx"></script>
   </body>  
 </html>
