--- a/areact/2-component/index.html
+++ b/areact/2-component/index.html
@@ -12,7 +12,7 @@
   <body>
     <div id="content"></div>
     
-    <script type="text/babel" src="hello.js"></script>
+    <script type="text/babel" src="hello2.js"></script>
     
   </body>
 </html>
