--- a/areact/2-component/index.html
+++ b/areact/2-component/index.html
@@ -11,8 +11,11 @@
   </head>
   <body>
     <div id="content"></div>
-    
-    <script type="text/babel" src="hello2.js"></script>
+
+    <div id="form"></div>
+
+  
+    <script type="text/babel" src="hello3.js"></script>
     
   </body>
 </html>
