--- a/thetutorial/index.html
+++ b/thetutorial/index.html
@@ -13,7 +13,7 @@
   <body>
     <div id="root"></div>
     
-    <script type="text/babel" src="index.jsx"></script>
+    <script type="text/babel" src="multiple.jsx"></script>
   </body>
 
 </html>
