--- a/areact/3-data/index.html
+++ b/areact/3-data/index.html
@@ -10,7 +10,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
   </head>
   <body>
-    <div id="content"></div>
+    <div id="root"></div>
 
     <div id="form"></div>
 
