--- a/areact/3-data/index.html
+++ b/areact/3-data/index.html
@@ -4,8 +4,8 @@
   <head>
     <meta charset="utf-8" />
     <title>React Tutorial - 3 - Data</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.2/react.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.2/react-dom.js"></script>
+    <script src="../build/react.js"></script>
+    <script src="../build/react-dom.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
   </head>
@@ -15,7 +15,7 @@
     <div id="form"></div>
 
 
-    <script type="text/babel" src="data.js"></script>
+    <script type="text/babel" src="data.jsx"></script>
 
   </body>
 </html>
