--- a/areact/4-game/index.html
+++ b/areact/4-game/index.html
@@ -8,9 +8,12 @@
     <script src="../build/react-dom.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="bootstrap/css/bootstrap.css" media="screen" />
+    <link rel="stylesheet" href="bootstrap/css/custom.css" media="screen" charset="utf-8" />
+    <script type="text/javascript" src="bootstrap/js/bootstrap.js" ></script>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="container" class="container"></div>
 
 
 
