--- a/thetutorial/props/index.html
+++ b/thetutorial/props/index.html
@@ -7,7 +7,6 @@
   <script src="../build/react-dom.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js"></script>
   <link rel="stylesheet" href="../build/css/bootstrap.css">
-  <script src="../build/js/bootstrap.min.js"></script>
   <link rel="stylesheet" href="../build/style.css">
 </head>
 <body>
@@ -15,6 +14,6 @@
   <div id="content"></div>
 
 
-<script type="text/babel" src="hero.jsx"></script>
+<script type="text/babel" src="props.jsx"></script>
 </body>
 </html>
