--- a/thetutorial/props/index.html
+++ b/thetutorial/props/index.html
@@ -11,9 +11,12 @@
 </head>
 <body>
   <nav id="nav"></nav>
-  <div id="content"></div>
 
-
+  <div class="container">
+    <div class="row">
+      <div id="content"></div>
+    </div>
+  </div>
 <script type="text/babel" src="props.jsx"></script>
 </body>
 </html>
