Thumbnail in bootstrap

--- a/thetutorial/thumbnail06/index.html
+++ b/thetutorial/thumbnail06/index.html
@@ -2,18 +2,22 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Props</title>
+  <title>Thumbnail</title>
   <script src="../build/react.js"></script>
   <script src="../build/react-dom.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js"></script>
   <link rel="stylesheet" href="../build/style.css">
+  <link rel="stylesheet" href="../build/css/bootstrap.css">
 </head>
 <body>
-  <hr>
-  <nav id="nav"></nav>
-  <div id="content"></div>
+  <div class="container">
+
+    <div class="row">
+      <div class="col-sm-5 target"></div>
+    </div>
+  </div>
 
 
-<script type="text/babel" src="form.jsx"></script>
+<script type="text/babel" src="thumbnail.jsx"></script>
 </body>
 </html>
