--- a/thetutorial/thumbnail-list07/index.html
+++ b/thetutorial/thumbnail-list07/index.html
@@ -13,11 +13,11 @@
   <div class="container">
 
     <div class="row target">
-      
+
     </div>
   </div>
 
 
-<script type="text/babel" src="thumbnail.jsx"></script>
+<script type="text/babel" src="application.js"></script>
 </body>
 </html>
