--- a/thetutorial/dropdown09/index.html
+++ b/thetutorial/dropdown09/index.html
@@ -15,11 +15,11 @@
       <h1 class="text-center">Events</h1>
     </div>
     <div class="row target">
-
+    
     </div>
   </div>
 
 
-<script type="text/babel" src="app.js"></script>
+<script type="text/babel" src="app.jsx"></script>
 </body>
 </html>
