--- a/thetutorial/ReactStarter/index.html
+++ b/thetutorial/ReactStarter/index.html
@@ -1,9 +1,15 @@
+<!DOCTYPE html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="container">
   </div>
-</body>
+
 <script src="main.js"></script>
+
+</body>
+</html>
