--- a/thetutorial/todo/index.html
+++ b/thetutorial/todo/index.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.13.3/react.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.13.3/JSXTransformer.js"></script>
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+    <meta charset="UTF-8">
+    <title>Todo App - ReactJS</title>
+    <script src="../build/react.js"></script>
+    <script src="../build/react-dom.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js"></script>
+    <link rel="stylesheet" href="../build/style.css">
+
 </head>
 <body>
 
@@ -17,97 +21,6 @@
       <div class="col-md-4"></div>
   </div>
 
-    <script type="text/jsx">
-    var TaskList = React.createClass({
-
-        render: function(){
-
-            return <ul>
-
-                {this.props.items.map((task, taskIndex) =>
-
-                    <div className="form-group text-center">
-                    <input className="toggle"
-                            aria-hidden="true"
-                            type="checkbox"
-                        >
-                        {" "}
-                        {task}{" "}
-                            <button className="glyphicon glyphicon-trash btn btn-danger"  aria-hidden="true" onClick={this.props.deleteTask} value={taskIndex} ></button>
-                        </input>
-                    </div>
-
-                )}
-            </ul>;
-        }
-     });
-
-    var TaskApp = React.createClass({
-        getInitialState: function(){
-            return {
-                 items: ['Laundry', 'Dishes', 'Vacuum'],
-                 task: ''
-            }
-        },
-
-        deleteTask: function(e) {
-            var taskIndex = parseInt(e.target.value, 10);
-            console.log('remove task: %d', taskIndex, this.state.items[taskIndex]);
-            this.setState(state => {
-                state.items.splice(taskIndex, 1);
-                return {items: state.items};
-            });
-        },
-
-        onChange: function(e) {
-            this.setState({ task: e.target.value });
-        },
-
-        overflowAlert: function() {
-            if ((50 - this.state.task.length) < 0) {
-                var beforeOverflowText = this.state.task.substring(50 - 10, 50);
-                var overflowText = this.state.task.substring(50);
-
-                  return (
-                    <div className="alert alert-warning">
-                      <strong>Oops! Too Long:</strong>
-                      &nbsp;...{beforeOverflowText}
-                      <strong className="bg-danger">{overflowText}</strong>
-                    </div>
-                  );
-            }
-        },
-        addTask:function (e){
-            this.setState({
-                items: this.state.items.concat([this.state.task]),
-
-                task: ''
-            })
-
-            e.preventDefault();
-        },
-
-        render: function(){
-            return(
-                <div className="well clearfix">
-                    <h1>To Do List: </h1>
-                    <TaskList items={this.state.items} deleteTask={this.deleteTask} />
-
-                    <form onSubmit={this.addTask}>
-                        {this.overflowAlert()}
-                        <input className="form-control form-group width" onChange={this.onChange} type="text" value={this.state.task}/>
-                        <span>{50 - this.state.task.length}</span>
-                        <button className="btn btn-primary pull-right form-group"
-                                disabled={this.state.task.length === 0 || (50 - this.state.task.length) < 0}> Add Task </button>
-                    </form>
-                </div>
-            );
-        }
-    });
-
-    React.render(<TaskApp />, document.getElementById('container'));
-
-
-    </script>
+    <script type="text/babel" src="app.jsx"></script>
 </body>
 </html>
